--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,7 @@
-streamlit==1.31.0
+streamlit==1.40.2
 tensorflow-cpu==2.20.0
+keras==3.4.1
 numpy==1.26.4
 pillow
-opencv-python-headless
-keras
-pandas
-joblib
-scikit-learn
+opencv-python-headless==4.9.0.80
+protobuf==5.28.0
