--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
-streamlit==1.40.2
-tensorflow-cpu==2.20.0
-keras==3.4.1
-numpy==1.26.4
+streamlit
+tensorflow-cpu
+numpy
 pillow
-opencv-python-headless==4.9.0.80
-protobuf==5.28.0
+opencv-python-headless
+protobuf
